Add cloudrun.Service's name reference back
- During the native provider bump from 4.22.0->4.48.0,
  crddiff detected the ref fields were removed. And
  the reason is the referenced resource (google_secret_manager_secret)
  was removed from the example in the Terraform registry.

Signed-off-by: Alper Rifat Ulucinar <ulucinar@users.noreply.github.com>

--- a/examples-generated/appengine/standardappversion.yaml
+++ b/examples-generated/appengine/standardappversion.yaml
@@ -29,6 +29,23 @@ spec:
       port: "8080"
     runtime: nodejs10
     service: myapp
+    serviceAccountSelector:
+      matchLabels:
+        testing.upbound.io/example-name: custom_service_account
+
+---
+
+apiVersion: cloudplatform.gcp.upbound.io/v1beta1
+kind: ServiceAccount
+metadata:
+  annotations:
+    meta.upbound.io/example-id: appengine/v1beta1/standardappversion
+  labels:
+    testing.upbound.io/example-name: custom_service_account
+  name: custom-service-account
+spec:
+  forProvider:
+    displayName: Custom Service Account
 
 ---
 
