--- a/package/crds/appengine.gcp.upbound.io_standardappversions.yaml
+++ b/package/crds/appengine.gcp.upbound.io_standardappversions.yaml
@@ -65,6 +65,10 @@ spec:
                 type: string
               forProvider:
                 properties:
+                  appEngineApis:
+                    description: Allows App Engine second generation runtimes to access
+                      the legacy bundled services.
+                    type: boolean
                   automaticScaling:
                     description: Automatic scaling is based on request rate, response
                       latencies, and other application metrics. Structure is documented
@@ -387,6 +391,87 @@ spec:
                   service:
                     description: AppEngine service resource
                     type: string
+                  serviceAccount:
+                    description: The identity that the deployed version will run as.
+                      Admin API will use the App Engine Appspot service account as
+                      default if this field is neither provided in app.yaml file nor
+                      through CLI flag.
+                    type: string
+                  serviceAccountRef:
+                    description: Reference to a ServiceAccount in cloudplatform to
+                      populate serviceAccount.
+                    properties:
+                      name:
+                        description: Name of the referenced object.
+                        type: string
+                      policy:
+                        description: Policies for referencing.
+                        properties:
+                          resolution:
+                            default: Required
+                            description: Resolution specifies whether resolution of
+                              this reference is required. The default is 'Required',
+                              which means the reconcile will fail if the reference
+                              cannot be resolved. 'Optional' means this reference
+                              will be a no-op if it cannot be resolved.
+                            enum:
+                            - Required
+                            - Optional
+                            type: string
+                          resolve:
+                            description: Resolve specifies when this reference should
+                              be resolved. The default is 'IfNotPresent', which will
+                              attempt to resolve the reference only when the corresponding
+                              field is not present. Use 'Always' to resolve the reference
+                              on every reconcile.
+                            enum:
+                            - Always
+                            - IfNotPresent
+                            type: string
+                        type: object
+                    required:
+                    - name
+                    type: object
+                  serviceAccountSelector:
+                    description: Selector for a ServiceAccount in cloudplatform to
+                      populate serviceAccount.
+                    properties:
+                      matchControllerRef:
+                        description: MatchControllerRef ensures an object with the
+                          same controller reference as the selecting object is selected.
+                        type: boolean
+                      matchLabels:
+                        additionalProperties:
+                          type: string
+                        description: MatchLabels ensures an object with matching labels
+                          is selected.
+                        type: object
+                      policy:
+                        description: Policies for selection.
+                        properties:
+                          resolution:
+                            default: Required
+                            description: Resolution specifies whether resolution of
+                              this reference is required. The default is 'Required',
+                              which means the reconcile will fail if the reference
+                              cannot be resolved. 'Optional' means this reference
+                              will be a no-op if it cannot be resolved.
+                            enum:
+                            - Required
+                            - Optional
+                            type: string
+                          resolve:
+                            description: Resolve specifies when this reference should
+                              be resolved. The default is 'IfNotPresent', which will
+                              attempt to resolve the reference only when the corresponding
+                              field is not present. Use 'Always' to resolve the reference
+                              on every reconcile.
+                            enum:
+                            - Always
+                            - IfNotPresent
+                            type: string
+                        type: object
+                    type: object
                   threadsafe:
                     description: Whether multiple requests can be dispatched to this
                       version at once.
@@ -396,6 +481,10 @@ spec:
                       is documented below.
                     items:
                       properties:
+                        egressSetting:
+                          description: The egress setting for the connector, controlling
+                            what traffic is diverted through it.
+                          type: string
                         name:
                           description: Full Serverless VPC Access Connector name e.g.
                             /projects/my-project/locations/us-central1/connectors/c1.
