--- a/package/crds/cloudrun.gcp.upbound.io_services.yaml
+++ b/package/crds/cloudrun.gcp.upbound.io_services.yaml
@@ -328,9 +328,122 @@ spec:
                                                       name:
                                                         description: Volume's name.
                                                         type: string
+                                                      nameRef:
+                                                        description: Reference to
+                                                          a Secret in secretmanager
+                                                          to populate name.
+                                                        properties:
+                                                          name:
+                                                            description: Name of the
+                                                              referenced object.
+                                                            type: string
+                                                          policy:
+                                                            description: Policies
+                                                              for referencing.
+                                                            properties:
+                                                              resolution:
+                                                                default: Required
+                                                                description: Resolution
+                                                                  specifies whether
+                                                                  resolution of this
+                                                                  reference is required.
+                                                                  The default is 'Required',
+                                                                  which means the
+                                                                  reconcile will fail
+                                                                  if the reference
+                                                                  cannot be resolved.
+                                                                  'Optional' means
+                                                                  this reference will
+                                                                  be a no-op if it
+                                                                  cannot be resolved.
+                                                                enum:
+                                                                - Required
+                                                                - Optional
+                                                                type: string
+                                                              resolve:
+                                                                description: Resolve
+                                                                  specifies when this
+                                                                  reference should
+                                                                  be resolved. The
+                                                                  default is 'IfNotPresent',
+                                                                  which will attempt
+                                                                  to resolve the reference
+                                                                  only when the corresponding
+                                                                  field is not present.
+                                                                  Use 'Always' to
+                                                                  resolve the reference
+                                                                  on every reconcile.
+                                                                enum:
+                                                                - Always
+                                                                - IfNotPresent
+                                                                type: string
+                                                            type: object
+                                                        required:
+                                                        - name
+                                                        type: object
+                                                      nameSelector:
+                                                        description: Selector for
+                                                          a Secret in secretmanager
+                                                          to populate name.
+                                                        properties:
+                                                          matchControllerRef:
+                                                            description: MatchControllerRef
+                                                              ensures an object with
+                                                              the same controller
+                                                              reference as the selecting
+                                                              object is selected.
+                                                            type: boolean
+                                                          matchLabels:
+                                                            additionalProperties:
+                                                              type: string
+                                                            description: MatchLabels
+                                                              ensures an object with
+                                                              matching labels is selected.
+                                                            type: object
+                                                          policy:
+                                                            description: Policies
+                                                              for selection.
+                                                            properties:
+                                                              resolution:
+                                                                default: Required
+                                                                description: Resolution
+                                                                  specifies whether
+                                                                  resolution of this
+                                                                  reference is required.
+                                                                  The default is 'Required',
+                                                                  which means the
+                                                                  reconcile will fail
+                                                                  if the reference
+                                                                  cannot be resolved.
+                                                                  'Optional' means
+                                                                  this reference will
+                                                                  be a no-op if it
+                                                                  cannot be resolved.
+                                                                enum:
+                                                                - Required
+                                                                - Optional
+                                                                type: string
+                                                              resolve:
+                                                                description: Resolve
+                                                                  specifies when this
+                                                                  reference should
+                                                                  be resolved. The
+                                                                  default is 'IfNotPresent',
+                                                                  which will attempt
+                                                                  to resolve the reference
+                                                                  only when the corresponding
+                                                                  field is not present.
+                                                                  Use 'Always' to
+                                                                  resolve the reference
+                                                                  on every reconcile.
+                                                                enum:
+                                                                - Always
+                                                                - IfNotPresent
+                                                                type: string
+                                                            type: object
+                                                        type: object
                                                     required:
                                                     - key
-                                                    - name
                                                     type: object
                                                   type: array
                                               required:
@@ -581,8 +694,96 @@ spec:
                                               alias definitions must be set on the
                                               run.googleapis.com/secrets annotation.'
                                             type: string
-                                        required:
-                                        - secretName
+                                          secretNameRef:
+                                            description: Reference to a Secret in
+                                              secretmanager to populate secretName.
+                                            properties:
+                                              name:
+                                                description: Name of the referenced
+                                                  object.
+                                                type: string
+                                              policy:
+                                                description: Policies for referencing.
+                                                properties:
+                                                  resolution:
+                                                    default: Required
+                                                    description: Resolution specifies
+                                                      whether resolution of this reference
+                                                      is required. The default is
+                                                      'Required', which means the
+                                                      reconcile will fail if the reference
+                                                      cannot be resolved. 'Optional'
+                                                      means this reference will be
+                                                      a no-op if it cannot be resolved.
+                                                    enum:
+                                                    - Required
+                                                    - Optional
+                                                    type: string
+                                                  resolve:
+                                                    description: Resolve specifies
+                                                      when this reference should be
+                                                      resolved. The default is 'IfNotPresent',
+                                                      which will attempt to resolve
+                                                      the reference only when the
+                                                      corresponding field is not present.
+                                                      Use 'Always' to resolve the
+                                                      reference on every reconcile.
+                                                    enum:
+                                                    - Always
+                                                    - IfNotPresent
+                                                    type: string
+                                                type: object
+                                            required:
+                                            - name
+                                            type: object
+                                          secretNameSelector:
+                                            description: Selector for a Secret in
+                                              secretmanager to populate secretName.
+                                            properties:
+                                              matchControllerRef:
+                                                description: MatchControllerRef ensures
+                                                  an object with the same controller
+                                                  reference as the selecting object
+                                                  is selected.
+                                                type: boolean
+                                              matchLabels:
+                                                additionalProperties:
+                                                  type: string
+                                                description: MatchLabels ensures an
+                                                  object with matching labels is selected.
+                                                type: object
+                                              policy:
+                                                description: Policies for selection.
+                                                properties:
+                                                  resolution:
+                                                    default: Required
+                                                    description: Resolution specifies
+                                                      whether resolution of this reference
+                                                      is required. The default is
+                                                      'Required', which means the
+                                                      reconcile will fail if the reference
+                                                      cannot be resolved. 'Optional'
+                                                      means this reference will be
+                                                      a no-op if it cannot be resolved.
+                                                    enum:
+                                                    - Required
+                                                    - Optional
+                                                    type: string
+                                                  resolve:
+                                                    description: Resolve specifies
+                                                      when this reference should be
+                                                      resolved. The default is 'IfNotPresent',
+                                                      which will attempt to resolve
+                                                      the reference only when the
+                                                      corresponding field is not present.
+                                                      Use 'Always' to resolve the
+                                                      reference on every reconcile.
+                                                    enum:
+                                                    - Always
+                                                    - IfNotPresent
+                                                    type: string
+                                                type: object
+                                            type: object
                                         type: object
                                       type: array
                                   required:
