--- a/examples/sql/user.yaml
+++ b/examples/sql/user.yaml
@@ -2,7 +2,6 @@ apiVersion: sql.gcp.upbound.io/v1beta1
 kind: User
 metadata:
   annotations:
-    upjet.upbound.io/manual-intervention: "Depends on SQL instance to be successfully deleted"
     meta.upbound.io/example-id: sql/v1beta1/user
   labels:
     testing.upbound.io/example-name: example_user
@@ -25,9 +24,32 @@ data:
 kind: Secret
 metadata:
   annotations:
-    upjet.upbound.io/manual-intervention: "Depends on SQL instance to be successfully deleted"
     meta.upbound.io/example-id: sql/v1beta1/user
   labels:
     testing.upbound.io/example-name: example_user
   name: example-sql-user
   namespace: upbound-system
+
+---
+
+apiVersion: sql.gcp.upbound.io/v1beta1
+kind: DatabaseInstance
+metadata:
+  annotations:
+    uptest.upbound.io/pre-delete-hook: testhooks/delete-user.sh
+    meta.upbound.io/example-id: sql/v1beta1/user
+  labels:
+    testing.upbound.io/example-name: example_instance
+  # ${Rand...} is not valid YAML and is used with automated testing
+  name: example-instance-${Rand.RFC1123Subdomain}
+spec:
+  forProvider:
+    region: "us-central1"
+    databaseVersion: "MYSQL_5_7"
+    settings:
+      - tier: "db-f1-micro"
+        diskSize: 20
+    deletionProtection: false # allow crossplane to delete the instance automatically
+  writeConnectionSecretToRef:
+    name: example-sql-db-instance-secret
+    namespace: upbound-system
